<resources>
    <string name="app_name">Cahya Madina Travel</string>
    <string name="doa_manasik">Doa Manasik</string>
    <string name="informasi">Informasi</string>
    <string name="paket_umrah">Paket Umrah</string>
    <string name="cabang_piuh">Cabang dan PIUH</string>
    <string name="jadwal">Jadwal</string>
    <string name="panduan_umrah">Panduan Umrah</string>
    <string name="title_activity_doa_manasik1">DoaManasik1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab_doa">TabDoa</string>
    <string name="title_activity_doa_manasik">DoaManasik</string>
    <string name="doa_thawaf">Doa Thawaf</string>
    <string name="doa_sai">Doa Sai</string>
    <string name="doa_tahalul">Doa Tahalul</string>

</resources>
