<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_height="match_parent"
    tools:context="com.example.edsnowden.guidemanasikumrah.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/book"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/panduan_umrah"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/volume_up_interface_symbol"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/doa_manasik"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/information_button"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/informasi"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/archive_black_box"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/paket_umrah"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/group_profile_users"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cabang_piuh"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/calendar_with_spring_binder_and_date_blocks"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jadwal"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
